refactor: refatoração dos controllers (pt. 4)
